@@ -105,23 +105,53 @@ public:
   void SetNode (Ptr<Node> node);
 
   /**
-   * \brief Add an L4 protocol.
+   * \brief Add a L4 protocol.
    * \param protocol L4 protocol
    */
   void Insert (Ptr<IpL4Protocol> protocol);
 
   /**
-   * \brief Remove an L4 protocol.
-   * \param protocol L4 protocol to remove
+   * \brief Add a L4 protocol to a specific interface.
+   *
+   * This may be called multiple times for multiple interfaces for the same
+   * protocol.  To insert for all interfaces, use the separate
+   * Insert (Ptr<IpL4Protocol> protocol) method.
+   *
+   * Setting a protocol on a specific interface will overwrite the
+   * previously bound protocol.
+   *
+   * \param protocol L4 protocol.
+   * \param interfaceIndex interface index.
+   */
+  void Insert (Ptr<IpL4Protocol> protocol, uint32_t interfaceIndex);
+
+  /**
+   * \brief Remove a L4 protocol.
+   * \param protocol L4 protocol to remove.
    */
   void Remove (Ptr<IpL4Protocol> protocol);
 
   /**
+   * \brief Remove a L4 protocol from a specific interface.
+   * \param protocol L4 protocol to remove.
+   * \param interfaceIndex interface index.
+   */
+  void Remove (Ptr<IpL4Protocol> protocol, uint32_t interfaceIndex);
+
+  /**
    * \brief Get L4 protocol by protocol number.
    * \param protocolNumber protocol number
-   * \return corresponding Ipv6L4Protocol or 0 if not found
+   * \return corresponding IpL4Protocol or 0 if not found
    */
   virtual Ptr<IpL4Protocol> GetProtocol (int protocolNumber) const;
+
+  /**
+   * \brief Get L4 protocol by protocol number for the specified interface.
+   * \param protocolNumber protocol number
+   * \param interfaceIndex interface index, -1 means "any" interface.
+   * \return corresponding IpL4Protocol or 0 if not found
+   */
+  virtual Ptr<IpL4Protocol> GetProtocol (int protocolNumber, int32_t interfaceIndex) const;
 
   /**
    * \brief Create raw IPv6 socket.
@@ -454,9 +484,14 @@ private:
   typedef std::list<Ptr<Ipv6RawSocketImpl> > SocketList;
 
   /**
+   * \brief Container of the IPv6 L4 keys: protocol number, interface index
+   */
+  typedef std::pair<int, int32_t> L4ListKey_t;
+
+  /**
    * \brief Container of the IPv6 L4 instances.
    */
-  typedef std::list<Ptr<IpL4Protocol> > L4List_t;
+  typedef std::map<L4ListKey_t, Ptr<IpL4Protocol> > L4List_t;
 
   /**
    * \brief Container of the IPv6 Autoconfigured addresses.
